<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context="com.android.jdhshop.widget.ImageSelectDialog">    <TextView        android:id="@+id/abroad_takephoto"        android:layout_width="match_parent"        android:layout_height="@dimen/abroad_dialog_item_hight"        android:background="@drawable/abroad_dialogitem_selector"        android:gravity="center"        android:text="@string/abroad_photo"        android:textColor="@color/abroad_dialog_textcolor"        android:textSize="@dimen/abroad_dialog_textsize" />    <View        android:layout_width="match_parent"        android:layout_height="@dimen/margin_size0"        android:background="@color/abroad_dialog_view_bg" />    <TextView        android:id="@+id/abroad_choosephoto"        android:layout_width="match_parent"        android:layout_height="@dimen/abroad_dialog_item_hight"        android:background="@drawable/abroad_dialogitem_selector"        android:gravity="center"        android:text="@string/abroad_choosephotp"        android:textColor="@color/abroad_dialog_textcolor"        android:textSize="@dimen/abroad_dialog_textsize" />    <TextView        android:id="@+id/abroad_choose_cancel"        android:layout_width="match_parent"        android:layout_height="@dimen/abroad_dialog_item_hight"        android:layout_marginTop="@dimen/abroad_feedback_top"        android:background="@drawable/abroad_dialogitem_selector"        android:gravity="center"        android:text="@string/abroad_cancel"        android:textColor="@color/abroad_dialog_textcolor"        android:textSize="@dimen/abroad_dialog_textsize" /></LinearLayout>