<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_smart_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways">

            <ImageView
                android:id="@+id/img_bg"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/title_bar_head"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?actionBarSize"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="6dp">

                    <TextView
                        android:id="@+id/tv_follow"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/img_arrow"
                        android:background="@drawable/homepage_attention_bg"
                        android:gravity="center"
                        android:paddingStart="20dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="6dp"
                        android:text="@string/homepage_other_attention"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/img_arrow"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignBaseline="@+id/tv_follow"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/homepage_arrow_bg"
                        android:contentDescription="图片背景"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/icon_down" />


                    <com.android.jdhshop.widget.CircleImageView
                        android:id="@+id/iv_head"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:src="@mipmap/ic_launcher" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_recommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="6dp"
                        android:text="@string/homepage_other_recommend"
                        android:textColor="@color/black" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="美少女战士"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_sex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:drawableStart="@mipmap/icon_homepage_sex"
                            android:text="女" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_production"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/homepage_production"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="@string/homepage_like"
                            android:textColor="@color/black" />


                        <TextView
                            android:id="@+id/tv_fans"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="@string/homepage_fans"
                            android:textColor="@color/black" />


                        <TextView
                            android:id="@+id/tv_attention"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="@string/homepage_attention"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_attention_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/homepage_attention_default" />

                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/AppTheme.Toolbar"
                android:padding="6dp"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/icon_homepage_back" />

                    <ImageView
                        android:id="@+id/iv_search"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/iv_more"
                        android:src="@mipmap/icon_homepage_search" />

                    <ImageView
                        android:id="@+id/iv_more"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/icon_homepage_more" />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

        <com.android.jdhshop.widget.indicator.MagicIndicator
            android:id="@+id/tab_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/tab_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
